erDiagram
  Pokemon {
    int pokedex_number PK
    int region_id PK
    string name
    string image
    string species
    int primary_type_id
    int secondary_type_id
    int primary_ability_id
    int secondary_ability_id
    int hidden_ability_id
    string description
  }
  Pokemon_Ability {
    int ability_id PK
    string name
    string description
  }
  Pokemon_Evolution {
    int base_pokedex_number PK
    int evolved_pokedex_number PK
    int base_region_id PK
    int evolved_region_id PK
    string evolution_condition
    int chain_id PK
  }
  Pokemon_Game {
    int game_id PK
    string game_name
  }
  Pokemon_Level_Up_Moveset {
    int level_up_moveset_id PK
    int pokedex_number
    int region_id
    int move_id
    int mainline_game_id
    int level_learned
  }
  Pokemon_Location {
    int pokedex_number PK
    int region_id PK
    int game_id PK
    string location_name
  }
  Pokemon_Mainline_Game {
    int mainline_game_id PK
    string game_name
  }
  Pokemon_Move {
    int move_id PK
    string move_name
    string description
    int type_id
    int category_id
    int power
    float accuracy
    int pp
  }
  Pokemon_Move_Category {
    int category_id PK
    string category_name
  }
  Pokemon_Region {
    int region_id PK
    string name
    string image
    int start
    int end
  }
  Pokemon_Regional_Form {
    int region_id PK
    string region_name
  }
  Pokemon_Technical_Move {
    int technical_move_id PK
    int move_id
    int mainline_game_id
    int technical_number
    int is_tr
  }
  Pokemon_Technical_Moveset {
    int technical_moveset_id PK
    int pokedex_number
    int region_id
    int mainline_game_id
    int technical_move_id
  }
  Pokemon_Type {
    int type_id PK
    string type_name
  }
  Pokemon_Type_Effectiveness {
    int type_effectiveness_id PK
    int attacking_type_id
    int defending_type_id
    float damage_multiplier
  }
  Pokemon_Regional_Form ||--o{ Pokemon : "region_id->region_id"
  Pokemon_Ability ||--o{ Pokemon : "hidden_ability_id->ability_id"
  Pokemon_Ability ||--o{ Pokemon : "secondary_ability_id->ability_id"
  Pokemon_Ability ||--o{ Pokemon : "primary_ability_id->ability_id"
  Pokemon_Type ||--o{ Pokemon : "secondary_type_id->type_id"
  Pokemon_Type ||--o{ Pokemon : "primary_type_id->type_id"
  Pokemon ||--o{ Pokemon_Evolution : "evolved_pokedex_number->pokedex_number"
  Pokemon ||--o{ Pokemon_Evolution : "evolved_region_id->region_id"
  Pokemon ||--o{ Pokemon_Evolution : "base_pokedex_number->pokedex_number"
  Pokemon ||--o{ Pokemon_Evolution : "base_region_id->region_id"
  Pokemon_Mainline_Game ||--o{ Pokemon_Level_Up_Moveset : "mainline_game_id->mainline_game_id"
  Pokemon_Move ||--o{ Pokemon_Level_Up_Moveset : "move_id->move_id"
  Pokemon ||--o{ Pokemon_Level_Up_Moveset : "pokedex_number->pokedex_number"
  Pokemon ||--o{ Pokemon_Level_Up_Moveset : "region_id->region_id"
  Pokemon_Game ||--o{ Pokemon_Location : "game_id->game_id"
  Pokemon ||--o{ Pokemon_Location : "pokedex_number->pokedex_number"
  Pokemon ||--o{ Pokemon_Location : "region_id->region_id"
  Pokemon_Move_Category ||--o{ Pokemon_Move : "category_id->category_id"
  Pokemon_Type ||--o{ Pokemon_Move : "type_id->type_id"
  Pokemon_Mainline_Game ||--o{ Pokemon_Technical_Move : "mainline_game_id->mainline_game_id"
  Pokemon_Move ||--o{ Pokemon_Technical_Move : "move_id->move_id"
  Pokemon_Mainline_Game ||--o{ Pokemon_Technical_Moveset : "mainline_game_id->mainline_game_id"
  Pokemon ||--o{ Pokemon_Technical_Moveset : "pokedex_number->pokedex_number"
  Pokemon ||--o{ Pokemon_Technical_Moveset : "region_id->region_id"
  Pokemon_Type ||--o{ Pokemon_Type_Effectiveness : "defending_type_id->type_id"
  Pokemon_Type ||--o{ Pokemon_Type_Effectiveness : "attacking_type_id->type_id"
